--- a/src/data/sample/github-markdown-guide.mdx
+++ b/src/data/sample/github-markdown-guide.mdx
@@ -6,7 +6,7 @@ draft: false
 summary: 'Markdown cheatsheet for all your blogging needs - headers, lists, images, tables and more! An illustrated guide based on Github Flavored Markdown.'
 ---
 
-# Introduction
+## Introduction
 
 Markdown and Mdx parsing is supported via `unified`, and other remark and rehype packages. `next-mdx-remote` allows us to parse `.mdx` and `.md` files in a more flexible manner without touching webpack.
 
@@ -14,15 +14,15 @@ Github flavored markdown is used. `mdx-prism` provides syntax highlighting capab
 
 The following markdown cheatsheet is adapted from: https://guides.github.com/features/mastering-markdown/
 
-# What is Markdown?
+## What is Markdown?
 
 Markdown is a way to style text on the web. You control the display of the document; formatting words as bold or italic, adding images, and creating lists are just a few of the things we can do with Markdown. Mostly, Markdown is just regular text with a few non-alphabetic characters thrown in, like `#` or `*`.
 
-# Syntax guide
+## Syntax guide
 
 Here’s an overview of Markdown syntax that you can use anywhere on GitHub.com or in your own text files.
 
-## Headers
+### Headers
 
 ```
 # This is a h1 tag
@@ -38,7 +38,7 @@ Here’s an overview of Markdown syntax that you can use anywhere on GitHub.com 
 
 #### This is a h4 tag
 
-## Emphasis
+### Emphasis
 
 ```
 _This text will be italic_
@@ -54,9 +54,9 @@ _This text will be italic_
 
 _You **can** combine them_
 
-## Lists
+### Lists
 
-### Unordered
+#### Unordered
 
 ```
 - Item 1
@@ -70,7 +70,7 @@ _You **can** combine them_
   - Item 2a
   - Item 2b
 
-### Ordered
+#### Ordered
 
 ```
 1. Item 1
@@ -86,7 +86,7 @@ _You **can** combine them_
    1. Item 3a
    1. Item 3b
 
-## Images
+### Images
 
 ```
 ![GitHub Logo](https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png)
@@ -95,7 +95,7 @@ Format: ![Alt Text](url)
 
 ![GitHub Logo](https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png)
 
-## Links
+### Links
 
 ```
 http://github.com - automatic!
@@ -105,7 +105,7 @@ http://github.com - automatic!
 http://github.com - automatic!
 [GitHub](http://github.com)
 
-## Blockquotes
+### Blockquotes
 
 ```
 As Kanye West said:
@@ -119,7 +119,7 @@ As Kanye West said:
 > We're living the future so
 > the present is our past.
 
-## Inline code
+### Inline code
 
 ```
 I think you should use an
@@ -129,7 +129,7 @@ I think you should use an
 I think you should use an
 `<addr>` element here instead.
 
-## Syntax highlighting
+### Syntax highlighting
 
 Here’s an example of how you can use syntax highlighting with [GitHub Flavored Markdown](https://help.github.com/articles/basic-writing-and-formatting-syntax/):
 
@@ -152,7 +152,7 @@ function fancyAlert(arg) {
 }
 ```
 
-## Task Lists
+### Task Lists
 
 ```
 - [x] list syntax required (any unordered or ordered list supported)
@@ -164,7 +164,7 @@ function fancyAlert(arg) {
 - [x] this is a complete item
 - [ ] this is an incomplete item
 
-## Tables
+### Tables
 
 You can create tables by assembling a list of words and dividing them with hyphens `-` (for the first row), and then separating each column with a pipe `|`:
 
@@ -180,6 +180,6 @@ You can create tables by assembling a list of words and dividing them with hyphe
 | Content from cell 1         | Content from cell 2          |
 | Content in the first column | Content in the second column |
 
-## Strikethrough
+### Strikethrough
 
 Any word wrapped with two tildes (like `~~this~~`) will appear ~~crossed out~~.
