ui refactoring. progress on the blog. updated cv. etc.

--- a/src/data/sample/deriving-ols-estimator.mdx
+++ b/src/data/sample/deriving-ols-estimator.mdx
@@ -1,5 +1,5 @@
 ---
-title: Deriving the OLS Estimator
+title: DEV Deriving the OLS Estimator
 date: '2019-11-16'
 tags: ['next js', 'math', 'ols']
 draft: false
@@ -96,7 +96,7 @@ At times it might be easier to use vector notation. For consistency I will use t
 
 ## Least Squares
 
-**Start**:  
+**Start**:
 $$y_i = \mathbf{x}'_i \beta + u_i$$
 
 **Assumptions**:
@@ -106,14 +106,14 @@ $$y_i = \mathbf{x}'_i \beta + u_i$$
 3. rank($\mathbf{X}$) = $k$ (no multi-collinearity i.e. full rank)
 4. $Var(\mathbf{U}|\mathbf{X}) = \sigma^2 I_n$ (Homoskedascity)
 
-**Aim**:  
+**Aim**:
 Find $\beta$ that minimises sum of squared errors:
 
 $$
 Q = \sum_{i=1}^{n}{u_i^2} = \sum_{i=1}^{n}{(y_i - \mathbf{x}'_i\beta)^2} = (Y-X\beta)'(Y-X\beta)
 $$
 
-**Solution**:  
+**Solution**:
 Hints: $Q$ is a $1 \times 1$ scalar, by symmetry $\frac{\partial b'Ab}{\partial b} = 2Ab$.
 
 Take matrix derivative w.r.t $\beta$:
