--- a/src/data/sample/the-time-machine.mdx
+++ b/src/data/sample/the-time-machine.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'The Time Machine'
+title: 'DEV The Time Machine'
 date: '2018-08-15'
 tags: ['writings', 'book', 'reflection']
 draft: false
